force-app/main/default/objects/KimbleOne__PeriodType__c/KimbleOne__PeriodType__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__ConfigGuide</customHelpPage>
    <label>Period Type</label>
    <nameField>
        <label>PeriodType Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Period Types</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>