force-app/main/default/objects/KimbleOne__PeriodType__c/fields/KimbleOne__ForecastAtThisLevel__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastAtThisLevel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forecast At This Level</label>
    <type>Checkbox</type>
</CustomField>