force-app/main/default/objects/KimbleOne__PeriodType__c/fields/KimbleOne__ForecastUnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastUnitType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Obsolete - Forecast Unit Type</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipLabel>Period Types (Forecast Unit Type)</relationshipLabel>
    <relationshipName>Period_Types</relationshipName>
    <type>Lookup</type>
</CustomField>