force-app/main/default/objects/KimbleOne__PeriodType__c/fields/KimbleOne__MaximumUsage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MaximumUsage__c</fullName>
    <description>Maximum usage that is typically specified for the Period Type, in default Tracking Units.</description>
    <label>Maximum Usage</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>