force-app/main/default/objects/KimbleOne__PeriodType__c/fields/KimbleOne__TrackAtThisLevel__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TrackAtThisLevel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track At This Level</label>
    <type>Checkbox</type>
</CustomField>