force-app/main/default/objects/KimbleOne__PeriodType__c/fields/KimbleOne__UsageUnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UsageUnitType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usage Unit Type</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipLabel>Period Types</relationshipLabel>
    <relationshipName>PeriodTypes</relationshipName>
    <type>Lookup</type>
</CustomField>